Avoid button colliding with browser scrollbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@
 #header_control {
   position: fixed;
   top: 0;
-  right: 1em;
+  right: 2em;
   padding: 0;
   border: 0;
   z-index: 50;
